# dumpster

./: .gitignore  config_example.toml  curses_container.py  dumpster.py  main.py  netfilter.py  protocol_parser.py  pyproject.toml  service_parser.py  zen_custom.py
src/dumpster/: __init__.py  dumpster.py  dumpster_db.py  dumpster_rules.py  errors.py  main.py  netfilter.old  nft_line.py  nft_log_reader.py  protocol_parser.py  service_parser.py
tests/: test_log_line.py
